--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -148,6 +148,9 @@
   </h2>
     <br>
     <p class="lead"> If you don't have a PIN, try my website out using PIN: 16171150100000 or 33074170350000. </p>
+    <br>
+    <br>
+    <div class="alert alert-dismissible alert-primary"> Search by street address coming soon!</div>
   </main>
 
 </div>
