--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -135,7 +135,7 @@
     <h1 class="cover-heading" >Cook County <br> <b>Property Tax 1-2-3</b> </h1>
     <h3 class="masthead-brand"> Cook County homeowners pay property taxes every year, but the process can seem like a black box.</h3>
 
-    <p class="lead"> Enter your address PIN to find out where your taxes go and how they compare with the rest of the county.</p>
+    <p class="lead"> Enter your 14-digit address PIN (without dashes) to find out where your taxes go and how they compare with the rest of the county.</p>
     <br>
     <h2>
     <form method="post">
