--- a/il_gov_counter/cctaxes/templates/cctaxes/index.html
+++ b/il_gov_counter/cctaxes/templates/cctaxes/index.html
@@ -1,5 +1,6 @@
 
 {% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,11 +14,13 @@
 
     <meta charset="utf-8">
     <title>Property Tax 1-2-3 | Cook County</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.css" media="screen">
     <link rel="stylesheet" href="https://bootswatch.com/_assets/css/custom.min.css">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'cctaxes/style.css' %}">
+
     <script>
 
      var _gaq = _gaq || [];
@@ -36,6 +39,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <script>
     $(document).ready(function(){
       // Add smooth scrolling to all links
