Revert "css changes"
This reverts commit a5cbaba72e65a6130f085c2f528673eefc3202e7.

--- a/il_gov_counter/cctaxes/static/cctaxes/css/style.css
+++ b/il_gov_counter/cctaxes/static/cctaxes/css/style.css
@@ -1,9 +1,9 @@
 *::selection {
-  background-color: #d5ede0;
+  background-color: #d6f5d6;
 }
 
 h1, h2 {
-  color:#2bbc6f;
+  color:#d6f5d6;
 }
 
 #section1 {
