--- a/il_gov_counter/cctaxes/static/cctaxes/css/style.css
+++ b/il_gov_counter/cctaxes/static/cctaxes/css/style.css
@@ -1,57 +1,3 @@
-*::selection {
-  background-color: #d6f5d6;
-}
-
-h1, h2 {
-  color:#d6f5d6;
-}
-
-#section1 {
-  height: 800px;
-  background-color: white;
-}
-
-#section2 {
-  height: 800px;
-  background-color: white;
-}
-
-#section3 {
-  height: 800px;
-  background-color: white;
-}
-
-#section4 {
-  height: 800px;
-  background-color: white;
-}
-
-#section5 {
-  height: 800px;
-  background-color: white;
-}
-
-#section6 {
-  height: 800px;
-  background-color: white;
-}
-
-#section7 {
-  height: 800px;
-  background-color: white;
-}
-
-#section8 {
-  height: 800px;
-  background-color: white;
-}
-
-#section9 {
-  height: 800px;
-  background-color: white;
-}
-
-#section10 {
-  height: 800px;
-  background-color: white;
+li a {
+    color: green;
 }
